--- a/config/nginx/app_moodle.conf
+++ b/config/nginx/app_moodle.conf
@@ -1,14 +1,14 @@
 server {
   listen [::]:80;
   listen 80;
-  server_name moodle.karimlabs.local;
+  server_name moodle.domain.com;
   return 301 https://$server_name$request_uri;
 }
 
 
 server {
   listen 443 ssl;
-  server_name moodle.karimlabs.local;
+  server_name moodle.domain.com;
 
   ssl_certificate /etc/nginx/ssl/moodle.crt;
   ssl_certificate_key /etc/nginx/ssl/moodle.key;
